--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,22 +2,11 @@
 
 <div id="app" class="w-100 h-100 mild-column main-axis-alignment_center cross-axis-alignment_center mild-rg-sm mild-px-md mild-py-sm">
   <div ref="intro">
-    <h1 class="mild-fs-xxl">Olá! Sou seu site de portifófio Mildred!</h1>
+    <app-intro></app-intro>
   </div>
   <div ref="works" class="mild-ta-center">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <p>
-      <strong>
-        Agora você pode compartilhar seu trabalho com a minha ajuda!
-      </strong>
-    </p>
-  </div>
-  <div ref="contacts" class="mild-ta-center">
-    <footer>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</footer>
-    <footer>
-      <strong>
-        Feito com muito carinho pelo seu irmão David
-      </strong>
-    </footer>
+    <app-works></app-works>
   </div>
 </div>
+
+<app-contacts ref="contacts"></app-contacts>
