Scroll behavior on nav bar

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,14 @@
 <app-nav-bar/>
 
 <div id="app" class="w-100 h-100 mild-column main-axis-alignment_center cross-axis-alignment_center mild-rg-sm mild-px-md mild-py-sm">
-  <div ref="intro">
+  <div id="intro">
     <app-intro></app-intro>
   </div>
-  <div ref="works" class="mild-ta-center">
+  <div id="works" class="mild-ta-center">
     <app-works></app-works>
   </div>
 </div>
 
-<app-contacts ref="contacts"></app-contacts>
+<div id="contacts">
+  <app-contacts></app-contacts>
+</div>
