--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <app-nav-bar/>
 
-<div id="app" class="w-100 h-100 mild-column main-axis-alignment_center cross-axis-alignment_center mild-rg-sm mild-px-md mild-py-sm">
+<div id="app" class="w-100 h-100 mild-column main-axis-alignment_center cross-axis-alignment_center mild-mt-xxxl mild-rg-xl mild-pt-xl mild-pb-md mild-px-sm">
   <div id="intro">
     <app-intro></app-intro>
   </div>
