--- a/src/app/components/nav-bar/nav-bar.html
+++ b/src/app/components/nav-bar/nav-bar.html
@@ -1,8 +1,10 @@
-<div class="nav-bar_container mild-row cross-axis-alignment_center main-axis-alignment_space-between mild-px-xs mild-py-md">
-    <div class="image">Sua logo vai aqui!</div>
-    <div class="links-container mild-row cross-axis-alignment_center main-axis-alignment_center mild-cg-md">
-        <a href="#intro" class="link-item">Início</a>
-        <a href="#works" class="link-item">Trabalhos</a>
-        <a href="#contacts" class="link-item">Contatos</a>
+<div class="nav-bar_main-container w-100 mild-row cross-axis-alignment_center main-axis-alignment_center mild-px-xs mild-py-sm">
+    <div class="mild-row w-100 main-axis-alignment_center cross-axis-alignment_center mild-cg-xxl">
+        <div class="image mild-row main-axis-alignment_center mild-ta-center cross-axis-alignment_center">MC</div>
+        <div class="w-66 links-container mild-row cross-axis-alignment_center main-axis-alignment_center mild-cg-md">
+            <a href="#intro" class="link-item mild-fs-xl mild-row main-axis-alignment_center cross-axis-alignment_center">Início</a>
+            <a href="#works" class="link-item mild-fs-xl mild-row main-axis-alignment_center cross-axis-alignment_center">Trabalhos</a>
+            <a href="#contacts" class="link-item mild-fs-xl mild-row main-axis-alignment_center cross-axis-alignment_center">Contatos</a>
+        </div>
     </div>
 </div>
